src/objects/BMCServiceDesk__KM_KnowledgeArticle__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpRFKnowledge</customHelpPage>
    <description>Stores data for knowledge articles.</description>
    <fields>
        <fullName>BMCServiceDesk__Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Article_Number__c</fullName>
        <formula>VALUE(MID(Name,4, (LEN(Name)-3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Article_Type__c</fullName>
        <formula>IF($RecordType.DeveloperName = &apos;FAQ&apos;, $Label.bmcservicedesk__kmfaq,  
IF($RecordType.DeveloperName = &apos;How_To&apos;, $Label.bmcservicedesk__kmhowto,  
IF($RecordType.DeveloperName = &apos;Known_Error&apos;, $Label.bmcservicedesk__kmknownerror,  
IF($RecordType.DeveloperName = &apos;Problem_Solution&apos;, $Label.bmcservicedesk__kmproblemsolution, $RecordType.Name) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Checked_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates, if set to check, whether the KA is checked out for editing.</description>
        <label>Checked out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_Date__c</fullName>
        <label>Retired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CreateChangeRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Error_description__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Knowledge Articles</relationshipLabel>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__KA_Account_Links__c</fullName>
        <label>Linked Accounts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Keywords__c</fullName>
        <label>Keywords</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Original_Knowledge_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the original KA</description>
        <label>Original Knowledge Article</label>
        <referenceTo>BMCServiceDesk__KM_KnowledgeArticle__c</referenceTo>
        <relationshipLabel>Checked Out Draft Knowledge Article</relationshipLabel>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Problem__c</fullName>
        <label>Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PublishedDate__c</fullName>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Relevance__c</fullName>
        <formula>2 * BMCServiceDesk__Used_by_Staff_Members_Count__c  + 2 *  BMCServiceDesk__Used_Count__c  +  0.75 * BMCServiceDesk__View_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Used_Count__c</fullName>
        <inlineHelpText>Number of times used in Self Service</inlineHelpText>
        <label>Used in Self Service #</label>
        <summaryFilterItems>
            <field>BMCServiceDesk__KM_Feedback__c.BMCServiceDesk__Issue__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BMCServiceDesk__KM_Feedback__c.BMCServiceDesk__isClientFeedBack__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>BMCServiceDesk__KM_Feedback__c.BMCServiceDesk__FKKnowledgeArticle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Used_by_Staff_Members_Count__c</fullName>
        <label>Used by Staff Members #</label>
        <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Incident_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Used_by_Staff__c</fullName>
        <description>Total number of times the Knowledge Article is used in Incidents, Problem, Changes by Staff</description>
        <formula>BMCServiceDesk__Used_by_Staff_Members_Count__c  +  BMCServiceDesk__Used_in_Change__c  +  BMCServiceDesk__Used_in_Problem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used by Staff #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Used_in_Change__c</fullName>
        <description>How many times the Knowledge Article is used in Change by Staff</description>
        <label>Used in Change #</label>
        <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Change_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Used_in_Problem__c</fullName>
        <description>How many times the Knowledge Article is used in Problem by Staff</description>
        <label>Used in Problem #</label>
        <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Problem_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VideoHeight__c</fullName>
        <defaultValue>360</defaultValue>
        <description>Height of the video in pixels</description>
        <label>Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VideoURL__c</fullName>
        <description>Video URL related to the knowledge article</description>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VideoWidth__c</fullName>
        <defaultValue>640</defaultValue>
        <description>Width of the video in pixels</description>
        <label>Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__View_Count__c</fullName>
        <label>Viewed in Self Service #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Visible_in_Self_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display in Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Workaround__c</fullName>
        <label>Workaround</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge Article</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__Article_Number__c</columns>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Article_Type__c</columns>
        <columns>BMCServiceDesk__Title__c</columns>
        <columns>BMCServiceDesk__FKCategory__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__PublishedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Draft_In_Review_Articles</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BMCServiceDesk__FKCategory__c</columns>
        <columns>BMCServiceDesk__Title__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__PublishedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>Draft,In Review</value>
        </filters>
        <label>Draft and In-Review Articles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Published_Articles</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BMCServiceDesk__FKCategory__c</columns>
        <columns>BMCServiceDesk__Title__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__PublishedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>Published Articles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Retired_Articles</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Article_Type__c</columns>
        <columns>BMCServiceDesk__FKCategory__c</columns>
        <columns>BMCServiceDesk__Title__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__PublishedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>Retired</value>
        </filters>
        <label>Retired Articles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CORHIO_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>CORHIO</label>
        <queue>CORHIO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>Integration</label>
        <queue>Integration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jiva_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>Jiva</label>
        <queue>Jiva</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NMHIE_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>NMHIE</label>
        <queue>NMHIE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nant_IMT_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>IMT</label>
        <queue>IMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PrimeSuite_EMR_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>PrimeSuite EMR</label>
        <queue>PrimeSuite_EMR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prophet_KM_KnowledgeArticle</fullName>
        <filterScope>Queue</filterScope>
        <label>Prophet</label>
        <queue>Prophet</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>KBA{0}</displayFormat>
        <label>Article ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <recordTypes>
        <fullName>BMCServiceDesk__FAQ</fullName>
        <active>true</active>
        <description>Articles that provide answers to frequently asked questions</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCServiceDesk__How_To</fullName>
        <active>true</active>
        <description>Articles that provide steps to perform a task</description>
        <label>How To</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCServiceDesk__Known_Error</fullName>
        <active>true</active>
        <description>Articles that provide information about known errors and workaround, if any</description>
        <label>Known Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCServiceDesk__Problem_Solution</fullName>
        <active>true</active>
        <description>Articles that provide solution to a problem</description>
        <label>Problem Solution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Category_Is_Required</fullName>
        <active>true</active>
        <description>User cannot save a record without inserting category</description>
        <errorConditionFormula>(ISBLANK(BMCServiceDesk__FKCategory__c ) || ISNULL(BMCServiceDesk__FKCategory__c )) &amp;&amp; (NOT(ISCHANGED( BMCServiceDesk__Used_by_Staff_Members_Count__c )))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__FKCategory__c</errorDisplayField>
        <errorMessage>Please enter the Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__CheckedOut_Draft_KA_Status_Cannot_Change</fullName>
        <active>true</active>
        <description>The status of the draft version of a knowledge article cannot be changed.</description>
        <errorConditionFormula>AND(ISCHANGED(BMCServiceDesk__Status__c),AND(Not(ISNULL(BMCServiceDesk__Original_Knowledge_Article__c)),Not(ISBLANK(BMCServiceDesk__Original_Knowledge_Article__c))))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of the draft version of a knowledge article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Review_date_must_be_a_future_date</fullName>
        <active>true</active>
        <description>Review date must be a future date.</description>
        <errorConditionFormula>AND
(
     BMCServiceDesk__Review_Date__c  &lt;   NOW(), 
     Not(ISCHANGED( BMCServiceDesk__View_Count__c ))   
)</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__Review_Date__c</errorDisplayField>
        <errorMessage>Review date must be a future date.</errorMessage>
    </validationRules>
</CustomObject>